{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 309,
  "lineage": "025b7823-8fa1-0dd4-a1dc-035989f57cab",
  "resources": [
    {
      "module": "module.ec2_security",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:654654369899:instance/i-03f0ea28fc6f8a34c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f0ea28fc6f8a34c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vika-ripardo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5e991f43ebcf8b6",
            "private_dns": "ip-10-0-20-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.153",
            "public_dns": "ec2-54-196-219-126.compute-1.amazonaws.com",
            "public_ip": "54.196.219.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0adf7468768a413a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07058c5b22f68684c",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-web-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e924c5275dfe730"
            ]
          },
          "dependencies": [
            "module.ec2_security.aws_security_group.app_sg",
            "module.ec2_security.data.aws_ami.ubuntu",
            "module.ecr.aws_ecr_repository.ecr_repo",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_role_policy",
            "module.iam_roles.aws_iam_role_policy_attachment.ecr_role_policy",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:654654369899:instance/i-004cbceedbca411ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004cbceedbca411ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vika-ripardo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06705abb88a63bc1c",
            "private_dns": "ip-10-0-10-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.61",
            "public_dns": "ec2-3-85-50-160.compute-1.amazonaws.com",
            "public_ip": "3.85.50.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f47143d253ea37f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017965300c3d0c203",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-jenkins-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e924c5275dfe730"
            ]
          },
          "dependencies": [
            "module.ec2_security.aws_security_group.app_sg",
            "module.ec2_security.data.aws_ami.ubuntu",
            "module.ecr.aws_ecr_repository.ecr_repo",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_role_policy",
            "module.iam_roles.aws_iam_role_policy_attachment.ecr_role_policy",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:security-group/sg-08e924c5275dfe730",
            "description": "Allow inbound traffic for application and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e924c5275dfe730",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vika-ripardo-dev-app-sg",
            "name_prefix": "",
            "owner_id": "654654369899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecr.aws_ecr_repository.ecr_repo",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_role_policy",
            "module.iam_roles.aws_iam_role_policy_attachment.ecr_role_policy",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:network-acl/acl-0d43aa1a376c517db",
            "default_network_acl_id": "acl-0d43aa1a376c517db",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d43aa1a376c517db",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654369899",
            "subnet_ids": [
              "subnet-003e44122310347f0",
              "subnet-017965300c3d0c203",
              "subnet-07058c5b22f68684c",
              "subnet-09e0860d8eb89b4f0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:route-table/rtb-0d9d421215b5aa2bf",
            "default_route_table_id": "rtb-0d9d421215b5aa2bf",
            "id": "rtb-0d9d421215b5aa2bf",
            "owner_id": "654654369899",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:security-group/sg-0a88028bacec5d112",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a88028bacec5d112",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654369899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-default",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3f64e0faeee43dc",
            "arn": "arn:aws:ec2:us-east-1:654654369899:elastic-ip/eipalloc-0d3f64e0faeee43dc",
            "domain": "vpc",
            "id": "eipalloc-0d3f64e0faeee43dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-210-245-72.compute-1.amazonaws.com",
            "public_ip": "54.210.245.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:internet-gateway/igw-0c2f0feae7e7c5e56",
            "id": "igw-0c2f0feae7e7c5e56",
            "owner_id": "654654369899",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3f64e0faeee43dc",
            "association_id": "eipassoc-0c7eff7db0dd9de8a",
            "connectivity_type": "public",
            "id": "nat-09169cc2b68b26aae",
            "network_interface_id": "eni-09b42e4a9d2667418",
            "private_ip": "10.0.10.11",
            "public_ip": "54.210.245.72",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017965300c3d0c203",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-us-east-1b",
              "Owners": "vika-ripardo"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09c234346fed99ff11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09169cc2b68b26aae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c234346fed99ff1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2f0feae7e7c5e56",
            "id": "r-rtb-0f64e02375e52c0c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f64e02375e52c0c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:route-table/rtb-09c234346fed99ff1",
            "id": "rtb-09c234346fed99ff1",
            "owner_id": "654654369899",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private",
              "Owners": "vika-ripardo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:route-table/rtb-0f64e02375e52c0c1",
            "id": "rtb-0f64e02375e52c0c1",
            "owner_id": "654654369899",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public",
              "Owners": "vika-ripardo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b12b148981890a",
            "route_table_id": "rtb-09c234346fed99ff1",
            "subnet_id": "subnet-003e44122310347f0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a89edc978a21483",
            "route_table_id": "rtb-09c234346fed99ff1",
            "subnet_id": "subnet-09e0860d8eb89b4f0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0377b91084ca5e843",
            "route_table_id": "rtb-0f64e02375e52c0c1",
            "subnet_id": "subnet-017965300c3d0c203"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2eb7938bf26bf8c",
            "route_table_id": "rtb-0f64e02375e52c0c1",
            "subnet_id": "subnet-07058c5b22f68684c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:subnet/subnet-003e44122310347f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003e44122310347f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654369899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:subnet/subnet-09e0860d8eb89b4f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e0860d8eb89b4f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654369899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private-us-east-1c",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-private-us-east-1c",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:subnet/subnet-017965300c3d0c203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017965300c3d0c203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654369899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public-us-east-1b",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:subnet/subnet-07058c5b22f68684c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07058c5b22f68684c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654369899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public-us-east-1c",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc-public-us-east-1c",
              "Owners": "vika-ripardo"
            },
            "vpc_id": "vpc-0682f41d53a24ca8b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654369899:vpc/vpc-0682f41d53a24ca8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d43aa1a376c517db",
            "default_route_table_id": "rtb-0d9d421215b5aa2bf",
            "default_security_group_id": "sg-0a88028bacec5d112",
            "dhcp_options_id": "dopt-07eacbd637007b080",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0682f41d53a24ca8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9d421215b5aa2bf",
            "owner_id": "654654369899",
            "tags": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc",
              "Owners": "vika-ripardo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vika-ripardo-dev-vpc",
              "Owners": "vika-ripardo"
            }
          }
        }
      ]
    }
  ]
}